--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -2,85 +2,90 @@
 
 {% block content %}
 
-<h2>How do the HOII Open Access Spectrum guide, the OAS Evaluation Tool, and the HOII Certification Program fit together?</h2>
+<h3>What is the Open Access Spectrum Evaluation Tool?</h3>
 
-<p>The HOII Open Access Spectrum guide lays out, in descriptive fashion, the array of polices a journal can have in the
-    continuum between "Open" and "Closed".  The OAS Evaluation Tool takes these policy distinctions and quantifies them.
-    The OAS Evaluation Tool, in turn, is the mechanism by which the HOII Certification Program performs its evaluations.
-    The OAS Evaluation Tool provides the scoring system for the HOII Certification Program.</p>
+<p><p>The Open Acces Spectrum (OAS) Evaluation Tool quantitatively scores journals' degrees of openness.  It uses the <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> as its basis.</p>
 
-<h2>Are there any other programs in the HOII family?</h2>
+<h3>What is the need for this type of certification?</h2>
 
-<p>Yes.  The <a href="http://howopenisit.org/lookup/">HowOpenIsIt? Open Article Gauge</a> reviews articles (identified by their DOIs or PubMed IDs) and identifies the
+<p>While the rapid growth of OA has seen an expansion in the availability of scholarly articles, it has also generated
+    no small degree of confusion within the research community.  Many journals claim to be “open” while actually placing
+    moderate or severe restrictions on what an author or reader can do with an article, for example.  It has become clear
+    that not all "Open" is created equal.  The OAS Evaluation Tool provides independent, expert analysis
+    of journal OA policies beyond just "is this article free to read?"</p>
+    
+<h3>What is the scoring grid on which OAS evaluations are based?</h3>
+
+<p>INSERT IMAGE OF GRID HERE!!</p>
+
+<h3>How do the HowOpenIsIt? guide and the OAS Evaluation Tool fit together?</h2>
+
+<p>The <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> lays out, in descriptive fashion, the array of polices a journal can have in the
+    continuum between "Open" and "Closed".  The OAS Evaluation Tool takes these policy distinctions and quantifies them.</p>
+
+<h3>Are there any other programs related to the HowOpenIsIt? project?</h2>
+
+<p>Yes.  The <a href="http://howopenisit.org/lookup/" target="_blank">HowOpenIsIt? Open Article Gauge</a> reviews articles (identified by their DOIs or PubMed IDs) and identifies the
 licensing information associated with these publications. Where a license can be determined the results page gives the
 name of the license, a link and details of the associated re-use rights. The service is available as a website, an API,
-and as source code.  The <a href="http://ananelson.github.io/oacensus/">OACensus Tool</a> is a reporting utility that builds a relevant list of scholarly outputs and then
+and as source code.  The <a href="http://ananelson.github.io/oacensus/" target="_blank">OACensus Tool</a> is a reporting utility that builds a relevant list of scholarly outputs and then
 tests those outputs for accessibility and openness. It is a configurable system that can obtain data from multiple
 sources to build up a multidimensional view of how an institution, funder, or person is implementing open access. It
 then uses this information to provide customized reports for the user.  Collectively, all the HOII programs are intended
 to be practical tools the community can use to better understand what it means to be "open".</p>
 
-<h2>What is the need for this type of certification?</h2>
+<h3>Who will be responsible for the OAS evaluations?</h2>
 
-<p>While the rapid growth of OA has seen an expansion in the availability of scholarly articles, it has also generated
-    no small degree of confusion within the research community.  Many journals claim to be “open” while actually placing
-    moderate or severe restrictions on what an author or reader can do with an article, for example.  It has become clear
-    that not all "Open" is created equal.  The HOII Certification Program will provide independent, expert evaluation
-    of journal OA policies beyond just "is this article free to read?"</p>
+<p>The HOII Certification Program is an independent body staffed by scholarly communication, library, and publishing experts, including representatives from SPARC and DOAJ.
+Collectively, they have decades of experience in the field.</p>
 
-<h2>Who will be responsible for the HOII Certification Program evaluations?</h2>
+<h3>What degree of control do the sponsoring organizations exert over the OAS evaluations?</h2>
 
-<p>The HOII Certification Program is an independent body staffed by scholarly communication and publishing experts.
-    Collectively, they have decades of experience in the field.</p>
-
-<h2>What degree of control do the sponsoring organizations exert over the HOII Certification Program?</h2>
-
-<p>HOII Certification Program personnel do not answer to the sponsors.  The sponsoring organizations have created the
+<p>OAS personnel do not answer to the sponsors.  The sponsoring organizations have created the
     infrastructure for the program but do not exert any control over the evaluations.</p>
 
-<h2>Will publishers have a chance to vet their HOII Certification Program evaluations?</h2>
+<h3>Do publishers have a chance to vet their OAS evaluations?</h2>
 
-<p>Yes.  Publishers will be provided with a provisional evaluation and offered the opportunity to provide any clarifying
+<p>Yes.  Publishers are provided with a provisional evaluation and offered the opportunity to provide any clarifying
     documentation that might impact a journal’s score.</p>
 
-<h2>What happens if a journal’s policy changes after it has been certified?</h2>
+<h3>What happens if a journal’s policy changes after it has been certified?</h2>
 
 <p>Each journal’s certified score will be time stamped to indicate precisely when the evaluation was performed.  Should
     either the publisher or anyone else have reason to believe that the journal’s policies have changed since that time,
     they are encouraged to contact us at <strong>[INSERT EMAIL ADDRESS]</strong>.</p>
 
-<h2>How will HOII Certification Program data be made available?</h2>
+<h3>How is OAS data be made available?</h2>
 
-<p>The HOII Certification Program reports are searchable on this web set. Additionally, the raw data are made openly
+<p>The OAS reports are searchable on this web site. Additionally, the raw data are made openly
     available for reuse via an open API and downloadable file.  This allows third parties to apply the data for their
-    own distinct purposes.  For example, a research funder could use the raw HOII Certification Program to easily
+    own distinct purposes.  For example, a research funder could use the raw OAS evaluation data to easily
     develop a whitelist of journals meeting its public access grant conditions.</p>
 
-<h2>If a journal scores above a certain number, is it considered "open"?</h2>
+<h3>If a journal scores above a certain number, is it considered "open"?</h2>
 
 <p>Not necessarily.  Stakeholders can value specific dimensions of openness differently.  For example, campuses that
-    have passed Open Access declarations typically want to see a copy of the article deposited in their institutional
-    repository.  A journal might have a relatively high HOII Certification Program score but nevertheless prohibit
+    have passed open Aacess declarations typically want to see a copy of the article deposited in their institutional
+    repository.  A journal might have a relatively high OAS score but nevertheless prohibit
     IR deposits.  In an instance such as this, the overall score would tell only a partial story.</p>
 
-<h2>A journal’s website says it is “Open Access”, yet it received a low HOII Certification score.  How is that possible?</h2>
+<h3>A journal’s website says it is “Open Access”, yet it received a low OAS score.  How is that possible?</h2>
 
-<p>In some instances, journals use the term “Open Access” when they really mean “free to read”.  Open Access refers to the
+<p>In some instances, journals use the term “open access” when they really mean “free to read”.  Open access refers to the
     immediate, barrier-free online availability of scholarly and scientific research articles, coupled with the rights to
     reuse these articles fully in the digital environment.  Immediacy, the elimination of barriers, and full reuse are
-    critical components of Open Access.  This allows for accelerated discovery and follow-on research.  It provides the
-    widest possible impact for scholarly materials, and the best return on investment.  The HOII Certification Program
+    critical components of open access.  This allows for accelerated discovery and follow-on research.  It provides the
+    widest possible impact for scholarly materials, and the best return on investment.  The OAS Evaluation Tool
     therefore incorporates these elements into its scoring mechanism.</p>
 
-<h2>How are “hybrid” journals dealt with in the HOII Certification Program?</h2>
+<h3>How are “hybrid” journals dealt with in the OAS Evaluation Tool?</h2>
 
 <p>Hybrid journals are publications that both collect subscription fees for their journal and offer an options for an
     author to pay a fee and make their article freely available for anyone to read.  The Reader Rights and Reuse Rights
-    dimensions of the HOII Open Access Spectrum each have entries that specifically address hybrids.  The HOII
-    Certification Program scoring gives journals limited credit for providing this option, as the default policy for
+    dimensions of the OAS each have entries that specifically address hybrids.  The OAS Evaluation Tool scoring gives journals limited credit for providing this option, as the default policy for
     these publications remains one which prohibits unfettered readership and reuse.</p>
 
-<h2>I am an editor or publisher interested in getting my journal(s) certified.  How do I do so?</h2>
+<h3>I am an editor or publisher interested in getting my journal(s) certified.  How do I do so?</h2>
 
 <p>Please <strong>[email us]</strong>.</p>
 
