--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -6,7 +6,7 @@
 
 <p><p>The Open Acces Spectrum (OAS) Evaluation Tool quantitatively scores journals' degrees of openness.  It uses the <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> as its basis.</p>
 
-<h3>What is the need for this type of certification?</h2>
+<h3>What is the need for this type of certification?</h3>
 
 <p>While the rapid growth of OA has seen an expansion in the availability of scholarly articles, it has also generated
     no small degree of confusion within the research community.  Many journals claim to be “open” while actually placing
@@ -18,12 +18,12 @@
 
 <p>INSERT IMAGE OF GRID HERE!!</p>
 
-<h3>How do the HowOpenIsIt? guide and the OAS Evaluation Tool fit together?</h2>
+<h3>How do the HowOpenIsIt? guide and the OAS Evaluation Tool fit together?</h3>
 
 <p>The <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> lays out, in descriptive fashion, the array of polices a journal can have in the
     continuum between "Open" and "Closed".  The OAS Evaluation Tool takes these policy distinctions and quantifies them.</p>
 
-<h3>Are there any other programs related to the HowOpenIsIt? project?</h2>
+<h3>Are there any other programs related to the HowOpenIsIt? project?</h3>
 
 <p>Yes.  The <a href="http://howopenisit.org/lookup/" target="_blank">HowOpenIsIt? Open Article Gauge</a> reviews articles (identified by their DOIs or PubMed IDs) and identifies the
 licensing information associated with these publications. Where a license can be determined the results page gives the
@@ -34,42 +34,42 @@ sources to build up a multidimensional view of how an institution, funder, or pe
 then uses this information to provide customized reports for the user.  Collectively, all the HOII programs are intended
 to be practical tools the community can use to better understand what it means to be "open".</p>
 
-<h3>Who will be responsible for the OAS evaluations?</h2>
+<h3>Who will be responsible for the OAS evaluations?</h3>
 
 <p>The HOII Certification Program is an independent body staffed by scholarly communication, library, and publishing experts, including representatives from SPARC and DOAJ.
 Collectively, they have decades of experience in the field.</p>
 
-<h3>What degree of control do the sponsoring organizations exert over the OAS evaluations?</h2>
+<h3>What degree of control do the sponsoring organizations exert over the OAS evaluations?</h3>
 
 <p>OAS personnel do not answer to the sponsors.  The sponsoring organizations have created the
     infrastructure for the program but do not exert any control over the evaluations.</p>
 
-<h3>Do publishers have a chance to vet their OAS evaluations?</h2>
+<h3>Do publishers have a chance to vet their OAS evaluations?</h3>
 
 <p>Yes.  Publishers are provided with a provisional evaluation and offered the opportunity to provide any clarifying
     documentation that might impact a journal’s score.</p>
 
-<h3>What happens if a journal’s policy changes after it has been certified?</h2>
+<h3>What happens if a journal’s policy changes after it has been certified?</h3>
 
 <p>Each journal’s certified score will be time stamped to indicate precisely when the evaluation was performed.  Should
     either the publisher or anyone else have reason to believe that the journal’s policies have changed since that time,
     they are encouraged to contact us at <strong>[INSERT EMAIL ADDRESS]</strong>.</p>
 
-<h3>How is OAS data be made available?</h2>
+<h3>How is OAS data be made available?</h3>
 
 <p>The OAS reports are searchable on this web site. Additionally, the raw data are made openly
     available for reuse via an open API and downloadable file.  This allows third parties to apply the data for their
     own distinct purposes.  For example, a research funder could use the raw OAS evaluation data to easily
     develop a whitelist of journals meeting its public access grant conditions.</p>
 
-<h3>If a journal scores above a certain number, is it considered "open"?</h2>
+<h3>If a journal scores above a certain number, is it considered "open"?</h3>
 
 <p>Not necessarily.  Stakeholders can value specific dimensions of openness differently.  For example, campuses that
     have passed open Aacess declarations typically want to see a copy of the article deposited in their institutional
     repository.  A journal might have a relatively high OAS score but nevertheless prohibit
     IR deposits.  In an instance such as this, the overall score would tell only a partial story.</p>
 
-<h3>A journal’s website says it is “Open Access”, yet it received a low OAS score.  How is that possible?</h2>
+<h3>A journal’s website says it is “Open Access”, yet it received a low OAS score.  How is that possible?</h3>
 
 <p>In some instances, journals use the term “open access” when they really mean “free to read”.  Open access refers to the
     immediate, barrier-free online availability of scholarly and scientific research articles, coupled with the rights to
@@ -78,14 +78,18 @@ Collectively, they have decades of experience in the field.</p>
     widest possible impact for scholarly materials, and the best return on investment.  The OAS Evaluation Tool
     therefore incorporates these elements into its scoring mechanism.</p>
 
-<h3>How are “hybrid” journals dealt with in the OAS Evaluation Tool?</h2>
+<h3>How are “hybrid” journals dealt with in the OAS Evaluation Tool?</h3>
 
 <p>Hybrid journals are publications that both collect subscription fees for their journal and offer an options for an
     author to pay a fee and make their article freely available for anyone to read.  The Reader Rights and Reuse Rights
     dimensions of the OAS each have entries that specifically address hybrids.  The OAS Evaluation Tool scoring gives journals limited credit for providing this option, as the default policy for
     these publications remains one which prohibits unfettered readership and reuse.</p>
 
-<h3>I am an editor or publisher interested in getting my journal(s) certified.  How do I do so?</h2>
+<h3>Why are some traditional subscription journals included here?</h3>
+
+<p>Many subscription journals have policies that address certain aspects of openness, such as allowing authors to post in institutional repositories, or automatically depositing funded papers into PubMed Central. The OAS Tool highlights how even "traditional" journals can promote openness in their own fashion.</p>
+
+<h3>I am an editor or publisher interested in getting my journal(s) certified.  How do I do so?</h3>
 
 <p>Please <strong>[email us]</strong>.</p>
 
