--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -49,6 +49,10 @@ Collectively, they have decades of experience in the field.</p>
 <p>Yes.  Publishers are provided with a provisional evaluation and offered the opportunity to provide any clarifying
     documentation that might impact a journal’s score.</p>
 
+<h3>How was the initial batch of evaluated journals selected?</h3>
+
+<p>Journals from the freely available <a href="http://www.scimagojr.com/" target="_blank">Scimago</a> dataset were divided into open access and non-open access journals on the basis of a lookup of their ISSN in Directory of Open Access Journals (DOAJ). The top 600 journals from the non-OA set and the top 200 from the OA set based on ranking by Scimago Journal Rank were selected.  Additionally, 200 journals were selected from across the Scielo, Redalyc, Bioline, AJOL, and DOAJ databases to ensure geographic and subject diversity.</p>
+
 <h3>What happens if a journal’s policy changes after it has been certified?</h3>
 
 <p>Each journal’s certified score will be time stamped to indicate precisely when the evaluation was performed.  Should
