--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -18,6 +18,14 @@
 
 <p>INSERT IMAGE OF GRID HERE!!</p>
 
+<h3>Why are the values of each of the six categories not equal?</h3>
+
+<p>The scale was developed over a period of 16 months, drawing from the input of a wide range of scholarly communication professionals.  The team believes that reader and reuse rights have a wider impact on “opening” a journal’s communal value than the other categories.  Automatic posting rights have the least impact because, even in their absence, the author can deposit his/her paper in PubMed Central or other trusted repositories provided his/her author posting rights are codified. </p>
+
+<h3>Within each catgory, why aren't the step classifications evenly spaced?</h3>
+
+<p>This reflects community input as to the degree of openness that each "step" represents.  the “openness gap” between a twelve and six month reader rights embargo is inherently smaller than the gap between a twelve month embargo and the hybrid approach.</p>
+
 <h3>How do the HowOpenIsIt? guide and the OAS Evaluation Tool fit together?</h3>
 
 <p>The <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> lays out, in descriptive fashion, the array of polices a journal can have in the
