update header banner and add faq image

--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -16,7 +16,7 @@
     
 <h3>What is the scoring grid on which OAS evaluations are based?</h3>
 
-<p>INSERT IMAGE OF GRID HERE!!</p>
+<p><img src="/static/images/OAS_scoring_grid.jpg"/></p>
 
 <h3>Why are the values of each of the six categories not equal?</h3>
 
