--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -16,7 +16,12 @@
     
 <h3>What is the scoring grid on which OAS evaluations are based?</h3>
 
-<p><img src="/static/images/OAS_scoring_grid.jpg"/></p>
+<div class="row">
+  <div class="col-md-12">
+    <p>Click on the image below to enlarge it.</p>
+  </div>
+  <div><a href="/static/images/OAS_scoring_grid.jpg" target="_blank"><img class="col-md-6" alt="OAS scoring grid" title="OAS scoring grid" src="/static/images/OAS_scoring_grid.jpg"/></a></div>
+</div>
 
 <h3>Why are the values of each of the six categories not equal?</h3>
 
