--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -4,7 +4,7 @@
 
 <h3>What is the Open Access Spectrum Evaluation Tool?</h3>
 
-<p><p>The Open Acces Spectrum (OAS) Evaluation Tool quantitatively scores journals' degrees of openness.  It uses the <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> as its basis.</p>
+<p><p>The Open Access Spectrum (OAS) Evaluation Tool quantitatively scores journals' degrees of openness.  It uses the <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> as its basis.</p>
 
 <h3>What is the need for this type of certification?</h3>
 
