--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -6,7 +6,7 @@
 
 <p><p>The Open Access Spectrum (OAS) Evaluation Tool quantitatively scores journals' degrees of openness.  It uses the <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> as its basis.</p>
 
-<h3>What is the need for this type of certification?</h3>
+<h3>What is the need for this type of program?</h3>
 
 <p>While the rapid growth of OA has seen an expansion in the availability of scholarly articles, it has also generated
     no small degree of confusion within the research community.  Many journals claim to be “open” while actually placing
