--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -70,7 +70,7 @@ Collectively, they have decades of experience in the field.</p>
 
 <p>Each journal’s certified score will be time stamped to indicate precisely when the evaluation was performed.  Should
     either the publisher or anyone else have reason to believe that the journal’s policies have changed since that time,
-    they are encouraged to contact us at <strong>[INSERT EMAIL ADDRESS]</strong>.</p>
+    they are encouraged to <a href="mailto:oaspectrum@arl.org">contact us</a> .</p>
 
 <h3>How is OAS data be made available?</h3>
 
@@ -108,6 +108,6 @@ Collectively, they have decades of experience in the field.</p>
 
 <h3>I am an editor or publisher interested in getting my journal(s) certified.  How do I do so?</h3>
 
-<p>Please <strong>[email us]</strong>.</p>
+<p>Please <a href="mailto:oaspectrum@arl.org?subject=Request for OAS Evaluation">contact us</a>.</p>
 
 {% endblock %}
