--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -31,6 +31,10 @@
 
 <p>This reflects community input as to the degree of openness that each "step" represents.  the “openness gap” between a twelve and six month reader rights embargo is inherently smaller than the gap between a twelve month embargo and the hybrid approach.</p>
 
+<h3>Has any journal received a perfect score of 100?</h3>
+
+<p>Not as yet.  At present, full marks for Machine Readability are difficult to achieve, as a community standard API or protocol does not exist today. Machine readability and the automated discovery and use of content is perhaps the major challenge for scholarly publishers of the next decade. It must become more straightforward for machines to understand where to find articles and to identify the parts of an article. There is also work to be done on improving the way data is represented in research articles (e.g., tables) and more generally how data is described within the article and supplementary material. It is a reasonable observation that the highest rating within the Machine Readability category is currently aspirational.</p>
+
 <h3>How do the HowOpenIsIt? guide and the OAS Evaluation Tool fit together?</h3>
 
 <p>The <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> lays out, in descriptive fashion, the array of polices a journal can have in the
