--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -27,7 +27,7 @@
 
 <p>The scale was developed over a period of 16 months, drawing from the input of a wide range of scholarly communication professionals.  The team believes that reader and reuse rights have a wider impact on “opening” a journal’s communal value than the other categories.  Automatic posting rights have the least impact because, even in their absence, the author can deposit his/her paper in PubMed Central or other trusted repositories provided his/her author posting rights are codified. </p>
 
-<h3>Within each catgory, why aren't the step classifications evenly spaced?</h3>
+<h3>Within each category, why aren't the step classifications evenly spaced?</h3>
 
 <p>This reflects community input as to the degree of openness that each "step" represents.  the “openness gap” between a twelve and six month reader rights embargo is inherently smaller than the gap between a twelve month embargo and the hybrid approach.</p>
 
