--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -29,7 +29,7 @@
 
 <h3>Within each category, why aren't the step classifications evenly spaced?</h3>
 
-<p>This reflects community input as to the degree of openness that each "step" represents.  the “openness gap” between a twelve and six month reader rights embargo is inherently smaller than the gap between a twelve month embargo and the hybrid approach.</p>
+<p>This reflects community input as to the degree of openness that each "step" represents.  The “openness gap” between a twelve and six month reader rights embargo is inherently smaller than the gap between a twelve month embargo and the hybrid approach.</p>
 
 <h3>Has any journal received a perfect score of 100?</h3>
 
@@ -76,7 +76,7 @@ Collectively, they have decades of experience in the field.</p>
     either the publisher or anyone else have reason to believe that the journal’s policies have changed since that time,
     they are encouraged to <a href="mailto:oaspectrum@arl.org">contact us</a> .</p>
 
-<h3>How is OAS data be made available?</h3>
+<h3>How is OAS data made available?</h3>
 
 <p>The OAS reports are searchable on this web site. Additionally, the raw data are made openly
     available for reuse via an open API and downloadable file.  This allows third parties to apply the data for their
@@ -86,7 +86,7 @@ Collectively, they have decades of experience in the field.</p>
 <h3>If a journal scores above a certain number, is it considered "open"?</h3>
 
 <p>Not necessarily.  Stakeholders can value specific dimensions of openness differently.  For example, campuses that
-    have passed open Aacess declarations typically want to see a copy of the article deposited in their institutional
+    have passed open access declarations typically want to see a copy of the article deposited in their institutional
     repository.  A journal might have a relatively high OAS score but nevertheless prohibit
     IR deposits.  In an instance such as this, the overall score would tell only a partial story.</p>
 
