--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -93,7 +93,7 @@ Collectively, they have decades of experience in the field.</p>
 <h3>A journal’s website says it is “Open Access”, yet it received a low OAS score.  How is that possible?</h3>
 
 <p>In some instances, journals use the term “open access” when they really mean “free to read”.  Open access refers to the
-    immediate, barrier-free online availability of scholarly and scientific research articles, coupled with the rights to
+    immediate, barrier-free online availability of scholarly and scientific articles, coupled with the rights to
     reuse these articles fully in the digital environment.  Immediacy, the elimination of barriers, and full reuse are
     critical components of open access.  This allows for accelerated discovery and follow-on research.  It provides the
     widest possible impact for scholarly materials, and the best return on investment.  The OAS Evaluation Tool
