--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -53,7 +53,7 @@ to be practical tools the community can use to better understand what it means t
 
 <h3>Who will be responsible for the OAS evaluations?</h3>
 
-<p>The HOII Certification Program is an independent body staffed by scholarly communication, library, and publishing experts, including representatives from SPARC and DOAJ.
+<p>OAS evaluation are performed by a team of scholarly communication, library, and publishing experts, including representatives from SPARC and DOAJ.
 Collectively, they have decades of experience in the field.</p>
 
 <h3>What degree of control do the sponsoring organizations exert over the OAS evaluations?</h3>
