--- a/service/templates/sponsors.html
+++ b/service/templates/sponsors.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<p>The HowOpenIsIt? (HOII) Certification Program is an independent measure supported by a number of scholarly  communication organizations.</p>
+<p>The Open Access Spectrum Evaluation Tool is an independent measure supported by a number of scholarly  communication organizations.</p>
 
 <h1>Founding Organizations</h1>
 
@@ -18,7 +18,7 @@
 
 <h1 style="clear: both">Supporting Organizations</h1>
 
-<p style="margin-bottom: 30px; clear: both">The HowOpenIsIt? (HOII) Certification Program is further sustained by a broad coalition of organizations that support
+<p style="margin-bottom: 30px; clear: both">The HOpen Access Spectrum Evaluation Tool is further sustained by a broad coalition of organizations that support
     a greater understanding of what it means to be “open”.</p>
 
 <p style="margin-bottom: 30px; clear: both"><img src="{{ url_for('static', filename='images/bmc.gif') }}" style="width: 100px; margin-right: 15px; float: left; margin-bottom: 30px"><a href="http://www.biomedcentral.com/">BioMed Central</a> is an STM (Science, Technology and Medicine) publisher of more than 275 peer-reviewed open
