--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -4,7 +4,7 @@
 
 <h3>What is the Open Access Spectrum Evaluation Tool?</h3>
 
-<p><p>The Open Access Spectrum (OAS) Evaluation Tool quantitatively scores journals' degrees of openness.  It uses the <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> as its basis.</p>
+<p><p>The Open Access Spectrum (OAS) Evaluation Tool quantitatively scores journals' degrees of openness.  It uses the <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt?&reg guide</a> as its basis.</p>
 
 <h3>What is the need for this type of program?</h3>
 
@@ -35,7 +35,7 @@
 
 <p>Not as yet.  At present, full marks for Machine Readability are difficult to achieve, as a community standard API or protocol does not exist today. Machine readability and the automated discovery and use of content is perhaps the major challenge for scholarly publishers of the next decade. It must become more straightforward for machines to understand where to find articles and to identify the parts of an article. There is also work to be done on improving the way data is represented in research articles (e.g., tables) and more generally how data is described within the article and supplementary material. It is a reasonable observation that the highest rating within the Machine Readability category is currently aspirational.</p>
 
-<h3>How do the HowOpenIsIt? guide and the OAS Evaluation Tool fit together?</h3>
+<h3>How do the HowOpenIsIt?&reg guide and the OAS Evaluation Tool fit together?</h3>
 
 <p>The <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> lays out, in descriptive fashion, the array of polices a journal can have in the
     continuum between "Open" and "Closed".  The OAS Evaluation Tool takes these policy distinctions and quantifies them.</p>
