--- a/service/templates/sponsors.html
+++ b/service/templates/sponsors.html
@@ -13,7 +13,7 @@
 <p style="margin-bottom: 30px; clear: both"><img src="{{ url_for('static', filename='images/sparc.jpg') }}" style="width: 100px; margin-right: 15px; float: left; margin-bottom: 30px"><a href="http://www.sparc.arl.org/">Scholarly Publishing and Academic Resources Coalition (SPARC)</a> is an international alliance of academic and
     research libraries working to create a more open system of scholarly communication.</p>
 
-<p style="margin-bottom: 30px; clear: both"><img src="{{ url_for('static', filename='images/plos.svg') }}" style="width: 100px; margin-right: 15px; float: left; margin-bottom: 30px"><a href="https://www.plos.org/">Public Library of Science (PLOS)</a> is a nonprofit publisher and advocacy organization founded to accelerate
+<p style="margin-bottom: 30px; clear: both"><img src="{{ url_for('static', filename='images/plos.png') }}" style="width: 100px; margin-right: 15px; float: left; margin-bottom: 30px"><a href="https://www.plos.org/">Public Library of Science (PLOS)</a> is a nonprofit publisher and advocacy organization founded to accelerate
     progress in science and medicine by leading a transformation in research communication. </p>
 
 <h1 style="clear: both">Supporting Organizations</h1>
