--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -112,6 +112,6 @@ Collectively, they have decades of experience in the field.</p>
 
 <h3>I am an editor or publisher interested in getting my journal(s) certified.  How do I do so?</h3>
 
-<p>Please <a href="mailto:oaspectrum@arl.org?subject=Request for OAS Evaluation">contact us</a>..</p>
+<p>Please <a href="mailto:oaspectrum@arl.org?subject=Request for OAS Evaluation">contact us</a>.</p>
 
 {% endblock %}
