--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -51,7 +51,7 @@ sources to build up a multidimensional view of how an institution, funder, or pe
 then uses this information to provide customized reports for the user.  Collectively, all the HOII programs are intended
 to be practical tools the community can use to better understand what it means to be "open".</p>
 
-<h3>Who will be responsible for the OAS evaluations?</h3>
+<h3>Who is responsible for the OAS evaluations?</h3>
 
 <p>OAS evaluation are performed by a team of scholarly communication, library, and publishing experts, including representatives from DOAJ and librarians from the United States, Europe, and Africa.
 Collectively, they have decades of experience in the field.</p>
@@ -79,7 +79,7 @@ Collectively, they have decades of experience in the field.</p>
 <h3>How is OAS data made available?</h3>
 
 <p>The OAS reports are searchable on this web site. Additionally, the raw data are made openly
-    available for reuse via an open API and downloadable file.  This allows third parties to apply the data for their
+    available for reuse via an open API and downloadable file, licensed under a Creative Commons Attribution (CC BY) license..  This allows third parties to apply the data for their
     own distinct purposes.  For example, a research funder could use the raw OAS evaluation data to easily
     develop a whitelist of journals meeting its public access grant conditions.</p>
 
