--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -79,9 +79,13 @@ Collectively, they have decades of experience in the field.</p>
 <h3>How is OAS data made available?</h3>
 
 <p>The OAS reports are searchable on this web site. Additionally, the raw data are made openly
-    available for reuse via an open API and downloadable file, licensed under a Creative Commons Attribution (CC BY) license..  This allows third parties to apply the data for their
+    available for reuse via an open API and downloadable file.  This allows third parties to apply the data for their
     own distinct purposes.  For example, a research funder could use the raw OAS evaluation data to easily
     develop a whitelist of journals meeting its public access grant conditions.</p>
+
+<h3>What are the licensing rights associated with the OAS data?</h3>
+
+</p>The data on the site is made available under a Creative Commons Attribution (CC BY) license.  We encourage third parties to use it, and ask only that attribution is given.  On the issue of rights, also note that the image on the site banner is attributed to Christian Damasco et al., PLOS Computational Biology. 2008. 4(3) and licensed under CC BY. </p>
 
 <h3>If a journal scores above a certain number, is it considered "open"?</h3>
 
