fix typo on score details page

--- a/service/templates/score.html
+++ b/service/templates/score.html
@@ -213,7 +213,7 @@
             </td>
         </tr>
         <tr>
-            <td><strong>Copyights</strong></td>
+            <td><strong>Copyrights</strong></td>
             <td>{{score.copyrights_score}}</td>
             <td>{{score.copyrights_relevant_text}}</td>
             <td>
