--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -35,6 +35,10 @@
 
 <p>Not as yet.  At present, full marks for Machine Readability are difficult to achieve, as a community standard API or protocol does not exist today. Machine readability and the automated discovery and use of content is perhaps the major challenge for scholarly publishers of the next decade. It must become more straightforward for machines to understand where to find articles and to identify the parts of an article. There is also work to be done on improving the way data is represented in research articles (e.g., tables) and more generally how data is described within the article and supplementary material. It is a reasonable observation that the highest rating within the Machine Readability category is currently aspirational.</p>
 
+<h3>Does the OAS evaluate publishers, journals, or articles?</h3>
+
+<p>OAS evaluations are focused at the journal level. It would be ineffective to evaluate at the publisher level, as many publishers with multiple journals have different policies within these titles.  Evaluation at the article level is also inefficient.  Individual articles within a given journal may be free to read without the entire journal being fully open.  For example, some journals make all research articles free to read after 6 or 12 months behind a paywall.  Other subscription journals (sometimes called "hybrid" journals) offer an option for authors to pay a fee and make their articles freely available for anyone to read.  Journals with policies that allow for greater access and reuse of some but not all articles are accounted for in the OAS scoring system.  In general, these journals are more open than subscription-only journals, and less open than journals that provide immediate open access and reuse rights to all of their published articles.</p>
+
 <h3>How do the HowOpenIsIt?&reg guide and the OAS Evaluation Tool fit together?</h3>
 
 <p>The <a href="https://www.plos.org/open-access/howopenisit/" target="_blank">HowOpenIsIt? guide</a> lays out, in descriptive fashion, the array of polices a journal can have in the
@@ -105,7 +109,7 @@ Collectively, they have decades of experience in the field.</p>
 
 <h3>How are “hybrid” journals dealt with in the OAS Evaluation Tool?</h3>
 
-<p>Hybrid journals are publications that both collect subscription fees for their journal and offer an options for an
+<p>Hybrid journals are publications that both collect subscription fees for their journal and offer an option for an
     author to pay a fee and make their article freely available for anyone to read.  The Reader Rights and Reuse Rights
     dimensions of the OAS each have entries that specifically address hybrids.  The OAS Evaluation Tool scoring gives journals limited credit for providing this option, as the default policy for
     these publications remains one which prohibits unfettered readership and reuse.</p>
