--- a/service/templates/faq.html
+++ b/service/templates/faq.html
@@ -78,7 +78,7 @@ Collectively, they have decades of experience in the field.</p>
 
 <p>Each journal’s certified score will be time stamped to indicate precisely when the evaluation was performed.  Should
     either the publisher or anyone else have reason to believe that the journal’s policies have changed since that time,
-    they are encouraged to <a href="mailto:oaspectrum@arl.org">contact us</a> .</p>
+    they are encouraged to <a href="mailto:oaspectrum@sparcopen.org">contact us</a> .</p>
 
 <h3>How is OAS data made available?</h3>
 
@@ -120,6 +120,6 @@ Collectively, they have decades of experience in the field.</p>
 
 <h3>I am an editor or publisher interested in getting my journal(s) certified.  How do I do so?</h3>
 
-<p>Please <a href="mailto:oaspectrum@arl.org?subject=Request for OAS Evaluation">contact us</a>.</p>
+<p>Please <a href="mailto:oaspectrum@sparcopen.org?subject=Request for OAS Evaluation">contact us</a>.</p>
 
 {% endblock %}
